homework8 fixes
