# express-app-swagger/api/swagger/swagger.yaml
@@ -102,6 +102,8 @@ paths:
           description: "Validation errors"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/cities/{cityId}:
     x-swagger-router-controller: city
     put:
@@ -139,6 +141,8 @@ paths:
           description: "City not found"
         500:
           description: "Server error"
+      security:
+        - jwt: []
     delete:
       tags:
       - "city"
@@ -162,6 +166,8 @@ paths:
           description: "City not found"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/users:
     x-swagger-router-controller: user
     get:
@@ -184,6 +190,8 @@ paths:
           description: "Unauthorized"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/users/{userId}:
     x-swagger-router-controller: user
     delete:
@@ -209,6 +217,8 @@ paths:
           description: "User not found"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/products:
     x-swagger-router-controller: product
     get:
@@ -231,6 +241,8 @@ paths:
           description: "Unauthorized"
         500:
           description: "Server error"
+      security:
+        - jwt: []
     post:
       tags:
       - "product"
@@ -259,6 +271,8 @@ paths:
           description: "Validation errors"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/products/{productId}:
     x-swagger-router-controller: product
     get:
@@ -286,6 +300,8 @@ paths:
           description: "Unauthorized"
         500:
           description: "Server error"
+      security:
+        - jwt: []
     delete:
       tags:
       - "product"
@@ -309,6 +325,8 @@ paths:
           description: "Product not found"
         500:
           description: "Server error"
+      security:
+        - jwt: []
   /api/products/{productId}/reviewers:
     x-swagger-router-controller: product
     get:
@@ -340,6 +358,8 @@ paths:
           description: "Product not found"
         500:
           description: "Server error"
+      security:
+        - jwt: []
 securityDefinitions:
   jwt:
     type: "apiKey"
